# pushup-pal

./: .gitignore  Cargo.toml  Dockerfile.dev  README.md  docker-compose.yml
pushup-pal/: Cargo.toml  diesel.toml
pushup-pal/migrations/2024-07-15-231302_create_pushup_sessions/: up.sql
pushup-pal/migrations/2024-07-15-232010_create_pushup_sessions/: down.sql  up.sql
pushup-pal/src/: main.rs
pushup-pal/src/database/: actions.rs  mod.rs  models.rs  schema.rs
pushup-pal/src/renderer/: mod.rs  renderer.rs  services.rs
pushup-pal/src/services/: mod.rs
pushup-pal/src/services/api/: mod.rs  pushups.rs
pushup-pal/src/services/pushups/: mod.rs  routes.rs
pushup-pal/templates/: index.html
