[package]
name = "pushup-pal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["chrono", "postgres", "r2d2", "serde_json", "sqlite", "uuid"] }
diesel_derives = { version = "2.2.1", features = ["chrono", "sqlite", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
